# Simple-Keyframe-based-Animation-with-B-spline-Interpolation

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
thinker-obj/: thinker.mtl
